change class bug

--- a/exercise-incorrect.html
+++ b/exercise-incorrect.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta name="viewport" content="width=device-width,initial-scale=1" />
@@ -11,13 +11,14 @@
   <body>
     <header>
       <h1 class="red-text">A Demo Page</h1>
-      <span>Check out <a href="https://scripted">ScriptEd!</a></span>
-      <i class="fa fa-caret-left"></i>
+      <span>Check out <a href="https://scripted.org">ScriptEd!</a></span>
+      <id class="fa fa-caret-left"></i>
     </header>
-
+    <div class="Bug">Bug</div>
     <section>
       <img src="'https://media.giphy.com/media/JIX9t2j0ZTN9S/giphy.gif'">
     </section>
 
   </body>
 </html>
+ 
